tests/parser/should_fail/module_timed_assert.csp
module M

exports
    Timed (\ _ @ 1) {
        assert STOP [T= STOP
    }
endmodule
